# bvh-trace

./: .gitignore  CMakeLists.txt  bvh-trace  output.ppm  tutorial2-reference-code.cpp
assets/: bigben.tri
src/: PPMImage.h  aabb.h  bin.h  bvh.cpp  bvh.h  bvh_instance.cpp  bvh_instance.h  bvh_node.h  config.h  defs.h  main.cpp  random.h  ray.h  tlas.cpp  tlas.h  tlas_node.h  tri.h  util.cpp  util.h  vec_math.cpp  vec_math.h
